introduction; some new references

--- a/docRefs.bib
+++ b/docRefs.bib
@@ -21,7 +21,7 @@
 	doi = {10.1016/j.entcs.2018.11.017},
 	pages = {345--370},
 	journaltitle = {Electronic Notes in Theoretical Computer Science},
-	author = {Uustalu, Tarmo and Veltri, Niccolò and Zeilberger, Noam},
+	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	date = {2018},
 	note = {Publisher: Elsevier {BV}},
 	file = {Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:/Users/wanchengsyuan/Zotero/storage/4QSFPE3F/Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:application/pdf}
@@ -96,6 +96,19 @@
 	file = {Altenkirch et al. - 2010 - Monads Need Not Be Endofunctors.pdf:/Users/wanchengsyuan/Zotero/storage/8T4QKBPP/Altenkirch et al. - 2010 - Monads Need Not Be Endofunctors.pdf:application/pdf}
 }
 
+@article{altenkirch:monads:2014,
+  author    = {Thorsten Altenkirch and
+               James Chapman and
+               Tarmo Uustalu},
+  title     = {Monads need not be endofunctors},
+  journal   = {Log. Methods Comput. Sci.},
+  volume    = {11},
+  number    = {1},
+  year      = {2015},
+  url       = {https://doi.org/10.2168/LMCS-11(1:3)2015},
+  doi       = {10.2168/LMCS-11(1:3)2015}
+}
+
 @article{beke:categorification:2011,
 	title = {Categorification, term rewriting and the Knuth–Bendix procedure},
 	volume = {215},
@@ -123,7 +136,7 @@
 	abstract = {The Eilenberg-Kelly theorem states that a category C with an object I and two functors ⊗:C×C→C and ⊸:Cop×C→C related by an adjunction −⊗B⊣B⊸− natural in B is monoidal iff it is closed and moreover the adjunction holds internally. We dissect the proof of this theorem and observe that the necessity for a side condition on closedness arises because the standard definition of closed category is left-skew in regards to associativity. We analyze Street's observation that left-skew monoidality is equivalent to left-skew closedness and establish that monoidality is equivalent to closedness unconditionally under an adjusted definition of closedness that requires normal associativity. We also work out a definition of right-skew closedness equivalent to right-skew monoidality. We give examples of each type of structure; in particular, we look at the Kleisli category of a left-strong monad on a left-skew closed category and the Kleisli category of a lax closed monad on a right-skew closed category. We also view skew and normal monoidal and closed categories as special cases of skew and normal promonoidal categories and take a brief look at left-skew prounital-closed categories.},
 	pages = {233--256},
 	journaltitle = {Electronic Notes in Theoretical Computer Science},
-	author = {Uustalu, Tarmo and Veltri, Niccolò and Zeilberger, Noam},
+	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
 	date = {2020-10-01},
 	langid = {english},
@@ -137,7 +150,7 @@
 	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?LFMTP2020:17},
 	pages = {35--53},
 	journaltitle = {{EPTCS}},
-	author = {Uustalu, Tarmo and Veltri, Niccolò and Zeilberger, Noam},
+	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
 	file = {Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:/Users/wanchengsyuan/Zotero/storage/X5E9XJD8/Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/9KYPPGSQ/paper.html:text/html}
 }
@@ -148,7 +161,7 @@
 	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?ACT2020:60},
 	pages = {230--246},
 	journaltitle = {{EPTCS}},
-	author = {Uustalu, Tarmo and Veltri, Niccolò and Zeilberger, Noam},
+	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
 	file = {Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:/Users/wanchengsyuan/Zotero/storage/BC4BL4NP/Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/UVW2FYNM/paper.html:text/html}
 }
@@ -912,7 +925,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	pages = {184--200},
 	booktitle = {Logic, Language, Information, and Computation},
 	publisher = {Springer International Publishing},
-	author = {Veltri, Niccolò},
+	author = {Veltri, Niccol{\`o}},
 	editor = {Silva, Alexandra and Wassermann, Renata and de Queiroz, Ruy},
 	date = {2021},
 	langid = {english},
@@ -998,4 +1011,78 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	author = {Bourke, John and Lack, Stephen},
 	langid = {english},
 	file = {Bourke and Lack - BRAIDED SKEW MONOIDAL CATEGORIES.pdf:/Users/wanchengsyuan/Zotero/storage/ZHXPYSTY/Bourke and Lack - BRAIDED SKEW MONOIDAL CATEGORIES.pdf:application/pdf}
+}
+
+@article{zeilberger:semiassociative:19,
+  author    = {Noam Zeilberger},
+  title     = {A sequent calculus for a semi-associative law},
+  journal   = {Log. Methods Comput. Sci.},
+  volume    = {15},
+  number    = {1},
+  year      = {2019},
+  url       = {https://doi.org/10.23638/LMCS-15(1:9)2019},
+  doi       = {10.23638/LMCS-15(1:9)2019}
+}
+
+@article{girard:constructive:91,
+  author    = {Jean{-}Yves Girard},
+  title     = {A New Constructive Logic: Classical Logic},
+  journal   = {Math. Struct. Comput. Sci.},
+  volume    = {1},
+  number    = {3},
+  pages     = {255--296},
+  year      = {1991},
+  url       = {https://doi.org/10.1017/S0960129500001328},
+  doi       = {10.1017/S0960129500001328}
+}
+
+@inproceedings{tomita:realizability:21,
+  author    = {Haruka Tomita},
+  editor    = {Christel Baier and
+               Jean Goubault{-}Larrecq},
+  title     = {Realizability Without Symmetry},
+  booktitle = {29th {EACSL} Annual Conference on Computer Science Logic, {CSL} 2021,
+               January 25-28, 2021, Ljubljana, Slovenia (Virtual Conference)},
+  series    = {LIPIcs},
+  volume    = {183},
+  pages     = {38:1--38:16},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2021},
+  url       = {https://doi.org/10.4230/LIPIcs.CSL.2021.38},
+  doi       = {10.4230/LIPIcs.CSL.2021.38}
+}
+
+
+@article{mellies:categorical:09,
+  title={Categorical semantics of linear logic},
+  author={Mellies, Paul-Andr{\'e}},
+  journal={Panoramas et syntheses},
+  volume={27},
+  pages={15--215},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@article{lambek:deductive:68,
+  author    = {Joachim Lambek},
+  title     = {Deductive Systems and Categories I. Syntactic Calculus and Residuated
+               Categories},
+  journal   = {Math. Syst. Theory},
+  volume    = {2},
+  number    = {4},
+  pages     = {287--318},
+  year      = {1968},
+  url       = {https://doi.org/10.1007/BF01703261},
+  doi       = {10.1007/BF01703261}
+}
+
+@article{lambek:mathematics:58,
+  title={The mathematics of sentence structure},
+  author={Lambek, Joachim},
+  journal={The American Mathematical Monthly},
+  volume={65},
+  number={3},
+  pages={154--170},
+  year={1958},
+  publisher={Taylor \& Francis}
 }
