--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -18,6 +18,8 @@
 \usepackage{proof}
 %\usepackage[a4paper, total={6in, 8in}]{geometry}
 %\usepackage{lscape}
+\usepackage{graphicx} % for \rotatebox
+
 %% \theorembodyfont{}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}[theorem]{Corollary}
@@ -41,6 +43,7 @@
 \newcommand{\id}{\mathsf{id}}
 \newcommand{\ot}{\otimes}
 \newcommand{\lolli}{\multimap}
+\newcommand{\illol}{\rotatebox[origin=c]{180}{$\multimap$}}
 \newcommand{\I}{\mathsf{I}}
 \newcommand{\msfL}{\mathsf{L}}
 \newcommand{\defeq}{=_{\mathsf{df}}}
@@ -66,7 +69,7 @@ Niccol{\`o} Veltri \qquad\qquad Cheng-Syuan Wan
 \begin{document}
 \maketitle
 \begin{abstract}
-  Monoidal closed categories are used as standard categorical models of intuitionistic noncommutative linear logic: the monoidal unit and tensor model the multiplicative unit and conjunction; the internal hom models linear implication. In recent years, the weaker notion of skew monoidal closed category has been proposed by Ross Street, where the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation. A question arises naturally: Is it possible to find logical proof systems which are naturally modelled by skew monoidal closed categories? We answer positively by introducing three equivalent deductive systems that serve the purpose: a Hilbert-style calculus; a cut-free sequent calculus; a calculus of normal forms obtained from an adaptation of Andreoli's focusing technique to our skew setting. The resulting focused sequent calculus peculiarly employs a system of tags for keeping track of new formulae appearing in the antecedent and appropriately reducing nondeterministic choices in proof search. Focusing solves the coherence problem for skew monoidal closed categories, which implies the existence of effective procedures for deciding equality of canonical morphisms in all models.
+  Monoidal closed categories are standard categorical models of intuitionistic noncommutative linear logic: the monoidal unit and tensor model the multiplicative unit and conjunction; the internal hom models linear (actually ordered) implication. In recent years, the weaker notion of skew monoidal closed category has been proposed by Ross Street, where the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation. A question arises naturally: Is it possible to find logical proof systems which are naturally modelled by skew monoidal closed categories? We answer positively by introducing three equivalent deductive systems that serve the purpose: a Hilbert-style calculus; a cut-free sequent calculus; a calculus of normal forms obtained from an adaptation of Andreoli's focusing technique to our skew setting. The resulting focused sequent calculus peculiarly employs a system of tags for keeping track of new formulae appearing in the antecedent and appropriately reducing nondeterministic choices in proof search. Focusing solves the coherence problem for skew monoidal closed categories, which implies the existence of effective procedures for deciding equality of canonical morphisms in all models.
 
 %%   In previous works from Uustalu et al, proof theory of some variants of skew monoidal categories are developed.
 %%   We also know that given a skew monoidal category, there is a corresponding skew closed structure on the same category.
@@ -78,27 +81,46 @@ Niccol{\`o} Veltri \qquad\qquad Cheng-Syuan Wan
 %%   Therefore we have an effective procedure to determine morphism existence and equivalence in skew monoidal closed categories.
 \end{abstract}
 \section{Introduction}
-Recent discoveries on skew monoidal categories \cite{szlachanyi:skew-monoidal:2012} \cite{lack:skew:2012} \cite{lack:triangulations:2014} (check references in previous papers, at least include papers cited by previous three papers) provide us a good reasons to study their corresponding proof systems.
-In previous work \cite{uustalu:sequent:2018} \cite{uustalu:deductive:nodate} \cite{uustalu:proof:nodate} \cite{veltri:coherence:2021}, sequent calculus proof system for skew monoidal categories, prounital closed categories, partial normal monoidal categories, and skew symmetric monoidal categories are presented respectively.
-However, there is still lack of a proof analysis on skew monoidal closed categories.
-Therefore, in this paper we give sound and complete sequent calculus system with skew monoidal closed categories.
-Moreover, we use focusing strategy from \cite{andreoli:logic:1992} to solve the coherence problem of skew monoidal closed categories.
+It is a well-known fact from the late 80s/early 90s that symmetric monoidal closed categories are standard categorical models of MILL, multiplicative intuitionistic linear logic, whose logical connectives comprise of multiplicative unit $\I$ and conjunction $\ot$ and linear implication $\lolli$ \cite{mellies:categorical:09}. Probably lesser-known, though a quite straightforward generalization of the previous sentence which actually predated the inception of linear logic altogether, is the fact that (non-necessarily symmetric) monoidal biclosed categories are categorical models of the noncommutative variant of MILL (NMILL), where the structural rule of exchange is absent and there are two ordered implications $\lolli$ and $\illol$ \cite{lambek:deductive:68}. A proof system for NMILL is typically called \emph{Lambek calculus}. Lambek refers to the implications $\lolli$ and $\illol$ as residuals, and models of Lambek calculus are thereupon called residual categories. The Lambek calculus is often practically employed in formal investigations of natural languages \cite{lambek:mathematics:58}.
+By dropping one of the ordered implication of NMILL one obtains a fragment of the Lambek calculus enjoying categorical semantics in every monoidal closed category.
 
-Interestingly, because of having two connectives in our sequent calculus system, the focusing strategy becomes subtle and involved.
-It cannot just divide derivations into invertible part and non-invertible part then fix their order.
-We discovered that it is no harm to arrange invertible rules in a fixed order, but in non-invertible rules, bad thing happens.
-The naive focused sequent calculus system cannot prove some provable sequents in original sequent calculus.
-We will see this involved focused sequent calculus system in (?) section.
+In recent years, Ross Street introduced the new notion of skew monoidal closed categories \cite{street:skew-closed:2013}. These are a weakening of monoidal closed categories: their structure includes a unit $I$, a tensor $\ot$, an internal hom $\lolli$ and an adjunction relating the latter two operations, as in usual non-skew monoidal categories. The difference lays in the three structural laws of left and right unitality, $\lambda_A : \I \ot A \to A$ and $\rho_A : A \to A \ot \I$, and associativity, $\alpha_{A,B,C} : (A \ot B) \ot C \to A \ot (B \ot C)$, which are usually required to be natural isomorphisms, but in the skew variant are merely natural transformations with the specified orientation. Street originally proposed this weaker notion for better understanding and fixing a famous imbalance, first noticed by Eilenberg and Kelly \cite{eilenberg:closed:1966}, found in the usual adjunction relating monoidal and closed structures \cite{street:skew-closed:2013,uustalu:eilenberg-kelly:2020}. In the last decade, skew monoidal closed categories, together with their non-closed/non-monoidal variants, have been thoroughly studied, with applications ranging from algebra and homotopy theory to programming language semantics \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,lack:triangulations:2014,altenkirch:monads:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,tomita:realizability:21}.
 
-This paper will go through in this order, in section two, we see the Hilbert style calculus of skew monoidal closed categories and its proof equivalences.
+A question arises naturally: is it possible to characterize skew monoidal closed categories as standard categorical models of a certain logical proof system, e.g. a skew variant of NMILL?
+This paper provides a positive answer to this question. We introduce a cut-free sequent calculus for a skew variant of NMILL, which we name (rather unoriginally) SkNMILL. Sequents are peculiarly defined as triples $S \mid \Gamma \vdash A$, where the succedent is a single formula $A$ (as in intuitionistic linear logic), but the antecedent is split in two parts: an optional formula $S$, called \emph{stoup} \cite{girard:constructive:91}, and an ordered list of formulae $\Gamma$. Inference rules are similar to the ones of NMILL but with specific structural restrictions for accurately capturing the structural laws of skew monoidal closed categories, and nothing more. In particular, and in analogy with NMILL, the structural rules of contraction, weakening and exchange are all absent. Sets of derivations are quotiented by a congruence relation $\circeq$, carefully chosen to serve as the proof-theoretic counterpart of the equational theory of skew monoidal closed categories. The design of the sequent calculus draws inspiration from, and further advance, the line of work of Uustalu, Veltri and Zeilberger on proof systems for various categories with skew structure: skew semigroup (a.k.a. Tamari order) \cite{zeilberger:semiassociative:19}, skew monoidal (non-closed) \cite{uustalu:sequent:2018,uustalu:proof:nodate} and its symmetric variant \cite{veltri:coherence:2021}, skew prounital (non-monoidal) closed \cite{uustalu:deductive:nodate}.
 
-In third section, a cut-free sequent calculus of skew monoidal closed categories is presented.
-The key feature is that we have a special formula called stoup at the leftmost position in antecedent of a given sequent.
-In the same time, for any left rules, it can only be applied to the stoup formula.
-We will also see preliminarily relationship with Hilbert style calculus.
+The metatheory of SkNMILL is developed in two different but related directions:
+\begin{enumerate}[($i$)]
+  \item We study the categorical semantics of SkNMILL, by showing that the cut-free sequent calculus admits an interpretation of formulae, derivations and equational theory $\circeq$ in every skew monoidal closed category. Moreover, the sequent calculus is \emph{canonical} among skew monoidal closed categories, in the sense that it gives a particular presentation of the \emph{initial} (also called \emph{term} or \emph{free}) model. This can be made precise by introducing a Hilbert-style calculus which directly represents the initial model and subsequently proving that derivations in the two calculi are in a bijective correspondence.
+This shows that the categorical semantics of SkNMILL is sound and, most importantly, complete. The latter fact implies that deciding the commutativity of a diagram made of canonical morphisms (i.e. structural laws) in an arbitrary skew monoidal category, a problem typically referred to as \emph{coherence} in the categorical literature, is reduced to checking whether the corresponding derivations in the sequnt calculus are $\circeq$-related.
 
-Next section, we will see a focused sequent calculus system and its connection with original sequent calculus system.
-We will see that all derivations in a same equivalence class under proof conversion relation, they will correspond to a unique derivation in focused system.
+\item We investigate the proof-thereoretic semantics of SkNMILL, by defining a normalization strategy for sequent calculus derivations wrt. the congruence $\circeq$, when the latter is considered as weakly confluent and strongly normalizing reduction relation. The shape of normal forms is made explicit in a new \emph{focused} sequent calculus, whose derivations act as targets of the normalization procedure. The sequent calculus is ``focused'' in the sense of Andreoli \cite{andreoli:logic:1992}, as it implements a sound and complete goal-directed proof search strategy attempting to build a derivation in the (original, unfocused) sequent calculus. The focused system in this paper extends the previously 
+developed normal forms for skew monoidal (non-closed) categories \cite{uustalu:sequent:2018,uustalu:proof:nodate}. The presence of both positive ($\I$,$\ot$) and negative ($\lolli$) connectives requires some extra care in the implementation of the proof search algorithm, which is reflected in the design of the focused sequent calculus, in particular when aiming at removing all possible nondeterministic choices (wrt. the conversion $\circeq$) that can arise during proof search. This is technically realized in the focused sequent calculus by the peculiar employment of a system of \emph{tags} for keeping track of new formulae appearing in the antecedent. The focused sequent calculus can also be seen as a concrete presentation of the initial model for SkNMILL, and as such can be used for solving the coherence problem in an effective fashion: deciding commutativity of canonical diagrams in arbitrary skew monoidal categories is equivalent to deciding the \emph{syntactic} equality of the corresponding focused derivations.
+\end{enumerate}
+
+%% Srtucture of the paper?
+%% 
+%% Recent discoveries on skew monoidal categories \cite{szlachanyi:skew-monoidal:2012} \cite{lack:skew:2012} \cite{lack:triangulations:2014} (check references in previous papers, at least include papers cited by previous three papers) provide us a good reasons to study their corresponding proof systems.
+%% In previous work \cite{uustalu:sequent:2018} \cite{uustalu:deductive:nodate} \cite{uustalu:proof:nodate} \cite{veltri:coherence:2021}, sequent calculus proof system for skew monoidal categories, prounital closed categories, partial normal monoidal categories, and skew symmetric monoidal categories are presented respectively.
+%% However, there is still lack of a proof analysis on skew monoidal closed categories.
+%% Therefore, in this paper we give sound and complete sequent calculus system with skew monoidal closed categories.
+%% Moreover, we use focusing strategy from \cite{andreoli:logic:1992} to solve the coherence problem of skew monoidal closed categories.
+%% 
+%% Interestingly, because of having two connectives in our sequent calculus system, the focusing strategy becomes subtle and involved.
+%% It cannot just divide derivations into invertible part and non-invertible part then fix their order.
+%% We discovered that it is no harm to arrange invertible rules in a fixed order, but in non-invertible rules, bad thing happens.
+%% The naive focused sequent calculus system cannot prove some provable sequents in original sequent calculus.
+%% We will see this involved focused sequent calculus system in (?) section.
+%% 
+%% This paper will go through in this order, in section two, we see the Hilbert style calculus of skew monoidal closed categories and its proof equivalences.
+%% 
+%% In third section, a cut-free sequent calculus of skew monoidal closed categories is presented.
+%% The key feature is that we have a special formula called stoup at the leftmost position in antecedent of a given sequent.
+%% In the same time, for any left rules, it can only be applied to the stoup formula.
+%% We will also see preliminarily relationship with Hilbert style calculus.
+%% 
+%% Next section, we will see a focused sequent calculus system and its connection with original sequent calculus system.
+%% We will see that all derivations in a same equivalence class under proof conversion relation, they will correspond to a unique derivation in focused system.
 
 
 \section{Skew monoidal closed categories}
