--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1086,3 +1086,13 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
   year={1958},
   publisher={Taylor \& Francis}
 }
+@article{maclane1963natural,
+  title={Natural associativity and commutativity},
+  author={MacLane, Saunders},
+  journal={Rice Institute Pamphlet-Rice University Studies},
+  volume={49},
+  number={4},
+  year={1963},
+  url={https://scholarship.rice.edu/handle/1911/62865},
+  publisher={Rice University}
+}
