Descriptions on sk.mon.clo.cat equations

--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -487,7 +487,10 @@ satisfying following eighteen equations (m1)-(m5), (c1)-(c5), and (a1)-(a8).
 Equations (m1)-(m5) are called Mac Lane axiomsm.
 On the other hand, (c1)-(c5) are internal hom variants of Mac Lan Axioms.
 (a1)-(a8) are from \cite{street:skew-closed:2013}, and aims to establish bijections bewteen natural transformations(e.g. there is a bijection among $i$ and $\lambda$).
-Notice that (a1) and (a8) are presented in hom-set form in original paper but they are rewritten into internal hom representations here.
+(a1) and (a8) are presented in hom-set form in original paper but they are rewritten into internal hom presentations here.
+Notice that morphism $(A \ot \I) \lolli B \Longrightarrow A \lolli (\I \lolli B)$ in (a8) is actually an isomorphism in hom-set presentation, but only one direction left in the form internal hom.
+In general, this facts means that we \emph{cannot} internalize both directions of  adjunction bijection in a skew monoidal closed category.
+It requires our skew category to at least be associative normal, which means that natural transformation $\alpha$ is an isomorhphism, then we can internalize both directions of adjunction bijection.
 
 Give a set $\mathsf{At}$ which contains countably infinite atomic formulae, we can generate a free skew monoidal closed category according to following rules:
 \begin{displaymath}
