added some explicative text in Sections 2 and 3 (not done yet); small reorganization

--- a/docRefs.bib
+++ b/docRefs.bib
@@ -27,6 +27,15 @@
 	file = {Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:/Users/wanchengsyuan/Zotero/storage/4QSFPE3F/Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:application/pdf}
 }
 
+@incollection{uustalu:sequent:2021,
+  title={The sequent calculus of skew monoidal categories},
+  author={Uustalu, Tarmo and Veltri, Niccolo and Zeilberger, Noam},
+  booktitle={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics},
+  pages={377--406},
+  year={2021},
+  publisher={Springer}
+}
+
 @article{szlachanyi:skew-monoidal:2012,
 	title = {Skew-monoidal categories and bialgebroids},
 	volume = {231},
@@ -1095,4 +1104,16 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
   year={1963},
   url={https://scholarship.rice.edu/handle/1911/62865},
   publisher={Rice University}
+}
+
+@article{abrusci:noncommutative:1990,
+  author    = {V. Michele Abrusci},
+  title     = {Non-commutative intuitionistic linear logic},
+  journal   = {Math. Log. Q.},
+  volume    = {36},
+  number    = {4},
+  pages     = {297--318},
+  year      = {1990},
+  url       = {https://doi.org/10.1002/malq.19900360405},
+  doi       = {10.1002/malq.19900360405}
 }
